--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+1
   provider: ^4.0.2
+  geolocator: ^5.2.1
+  geocoder: ^0.2.1
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
