--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   geolocator: ^5.2.1
   geocoder: ^0.2.1
   http: ^0.12.0+4
+  cached_network_image: ^2.0.0
+  flutter_svg: ^0.17.1
 
 dev_dependencies:
   flutter_test:
